# studywithsai

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
src/studywithsai/: __init__.py
store/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_category.py  0003_alter_category_ccategory_alter_product_image.py
templates/: base.html  home.html
templates/registration/: login.html  logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
templates/store/: cart.html  checkout.html  edit_profile.html  my_account.html  my_orders.html  order_complete.html  order_detail.html  product_detail.html
