[project]
name = "studywithsai"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "saidharshan05", email = "saidharshan01@gmail.com" }
]
dependencies = [
    "django>=5.2.7",
    "pillow>=12.0.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.11.0",
    "dj-database-url>=3.0.1",
    "psycopg2-binary>=2.9.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/studywithsai"]
